# huhuhu

./: .env  .env.example  .gitignore  ANTI_BOT_ANALYSIS_REPORT.md  ANTI_BOT_RESOLUTION_SUMMARY.md  API_ANALYSIS_REPORT.md  BAO_CAO_CAP_NHAT_GUI_VA_MODULE_2.md  BAO_CAO_CHUAN_HOA_DU_AN.md  BAO_CAO_CHUAN_HOA_TOAN_DIEN.md  BAO_CAO_HOAN_THANH_CUOI_CUNG.md  BAO_CAO_HOAN_THIEN_DU_AN.md  BAO_CAO_KET_QUA_HAI_PHONG_2000_CCCD.md  BAO_CAO_KET_QUA_KHAC_PHUC_LOI.md  BAO_CAO_KET_QUA_KIEM_TRA.md  BAO_CAO_KHAC_PHUC_LOI_HE_THONG.md  BAO_CAO_KHAC_PHUC_TOAN_DIEN.md  BAO_CAO_KIEM_TRA_CUOI_CUNG.md  BAO_CAO_KIEM_TRA_DU_LIEU_THUC_TE.md  BAO_CAO_KIEM_TRA_HE_THONG_CCCD_THUC_TE.md  BAO_CAO_KIEM_TRA_HE_THONG_CLOUDFLARE.md  BAO_CAO_KIEM_TRA_MODULE_7.md  BAO_CAO_KIEM_TRA_QUY_TRINH.md  BAO_CAO_MODULE_7.md  BAO_CAO_PHAN_TICH_NGUYEN_NHAN_VA_DINH_HUONG_XU_LY.md  BAO_CAO_SO_SANH_MODULES.md  BAO_CAO_THANH_CONG_MODULE_7.md  BAO_CAO_THONG_TIN_THUC_TE_8_CCCD.md  BAO_CAO_TIEN_TRINH_CHI_TIET.md  BAO_CAO_TIEN_TRINH_CUOI_CUNG.md  BAO_CAO_TONG_KET_CHUAN_HOA.md  BAO_CAO_TONG_KET_CUOI_CUNG.md  BAO_CAO_TONG_KET_MODULE_7.md  BAO_CAO_TRIEN_KHAI_DU_LIEU_THUC_TE.md  BAO_CAO_TRIEN_KHAI_TOAN_DIEN_3_GIAI_PHAP.md  BHXH_LOOKUP_REPORT.md  BHXH_SYSTEM_ANALYSIS_REPORT.md  COMPLETE_ACCESS_GUIDE.md  COMPREHENSIVE_REMOTE_GUIDE.md  CURRENT_PROGRESS_REPORT.md  CURRENT_STATUS_REPORT.md  (+187 more)
.github/workflows/: codeql.yml  eslint.yml
API-thongtindoanhnghiep_backup/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  company_details_search.json  company_normalized.json  hai_phong_summary.json  pyproject.toml  pytest.ini  requirements.txt  setup.py
API-thongtindoanhnghiep_backup/docs/: __init__.py  performance_report.md
API-thongtindoanhnghiep_backup/examples/: __init__.py  check_business.py
API-thongtindoanhnghiep_backup/scripts/: normalize_company.py
API-thongtindoanhnghiep_backup/tests/: __init__.py  test_all_endpoints.py  test_thongtindoanhnghiep_api_client.py
bhxh-tool-enhanced-python_backup/: README.md  main.py  requirements.txt  run.py  setup.py  tinh-thanh.json
bhxh-tool-enhanced-python_backup/config/: __init__.py  config.py  validate_env.py
bhxh-tool-enhanced-python_backup/utils/: cache.py  (+4 more)
check-cccd_backup/: ADVANCED_OPTIMIZATIONS_REPORT.md  ANALYSIS_REPORT.md  COMPREHENSIVE_OPTIMIZATION_REPORT.md  OPTIMIZATION_REPORT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  TROUBLESHOOTING_GUIDE.md  auto_install_run.bat  auto_install_run.ps1  auto_install_run.sh  check_cccd.db  database_migration.py  monitoring_dashboard.py  requirements.txt  run_dev.py  setup_and_run.py  test_cccd_scraper.py  validate_configuration.py
config/: proxies.txt  proxy_config.json
debug_files/: debug_masothue_response.html  debug_scraper.py
htmlcov/: index.html  z_f1b38b22aeb65474___init___py.html  z_f1b38b22aeb65474_data_processor_py.html
logs/: logging.yaml
noip-2.1.9-1/: noip2
old_results/: batch_check_results_20250908_091027.xlsx  batch_check_results_fixed_20250908_094118.xlsx
output/: bhxh_data_results.xlsx  debug_data.csv  module_1_output.txt  module_2_check_cccd_output.txt  module_4_bhxh_output.txt  summary_report.txt
scripts/: check_real_data.py  clean_project.sh  export_excel.py  refresh_proxies.py
src/: __init__.py
test_files/: simple_realistic_test.py  simple_test.py  test_cccd_analyzer_module.py  test_cccd_improvements.py  test_distribution_analysis.py  test_fixed_scraper.py  test_fixed_scraper_simple.py  test_imports.py  test_realistic_generator.py
(+41 files in other folders)
